<resources>
    <string name="app_name">AsystentNayczyciela</string>
    <string name="welcome">Pomocnik nauczyciela</string>
    <string name="student">Student</string>
    <string name="nauczyciel">Nauczyciel</string>
    <string name="wybierzStudenta">Wybierz Studenta</string>
    <string name="wybierz">Wybierz</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="wybierzNauczyciela">Wybierz nauczyciela</string>
    <string name="studentLastName">Nazwisko</string>
    <string name="studentName">Imię</string>
    <string name="yoursGrades">Twoje oceny</string>
    <string name="yoursCourses">Twoje kursy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>