<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.FragmentChooseTeacher">

    <TextView
        android:id="@+id/chooseTeacherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wybierzNauczyciela"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/teacherSpinner"
        />

    <Spinner
        android:id="@+id/teacherSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseTeacherTextView"
        app:layout_constraintBottom_toTopOf="@id/choosenTeacherButton"
        />

    <Button
        android:id="@+id/choosenTeacherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wybierz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teacherSpinner"
        app:layout_constraintBottom_toTopOf="@id/editTeacherButton"
        />

    <Button
        android:id="@+id/addTeacherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editTeacherButton"
        app:layout_constraintTop_toBottomOf="@id/choosenTeacherButton"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/editTeacherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintLeft_toRightOf="@id/addTeacherButton"
        app:layout_constraintRight_toLeftOf="@id/deleteTeacherButton"
        app:layout_constraintTop_toBottomOf="@id/choosenTeacherButton"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/deleteTeacherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintLeft_toRightOf="@id/editTeacherButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choosenTeacherButton"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>