<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.FragmentChoosenStudent">

    <TextView
        android:id="@+id/witajSTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wybrany Student"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/studentsGradesBtn"
        />


    <Button
        android:id="@+id/studentsGradesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/witajSTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/studentsCoursesBtn"
        android:text="@string/yoursGrades"
        />

    <Button
        android:id="@+id/studentsCoursesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/studentsGradesBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editStudentButton2"
        android:text="@string/yoursCourses"
        />

    <Button
        android:id="@+id/editStudentButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/deleteStudentButton"
        app:layout_constraintTop_toBottomOf="@id/studentsCoursesBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/edit"
        />

    <Button
        android:id="@+id/deleteStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/editStudentButton2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentsCoursesBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/delete"
        />

</androidx.constraintlayout.widget.ConstraintLayout>