<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.FragmentAddStudent">

    <TextView
        android:id="@+id/addStudentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dodaj studenta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView1"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addStudentTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/newStudentName"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        android:text="@string/studentName"
        />

    <EditText
        android:id="@+id/newStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        app:layout_constraintTop_toBottomOf="@id/addStudentTV"
        app:layout_constraintLeft_toRightOf="@id/textView1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/newStudentLastName"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/newStudentLastName"
        app:layout_constraintBottom_toTopOf="@id/addStudentButton"
        android:text="@string/studentLastName"
        />

    <EditText
        android:id="@+id/newStudentLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        app:layout_constraintTop_toBottomOf="@id/newStudentName"
        app:layout_constraintLeft_toRightOf="@id/textView2"
        app:layout_constraintBottom_toTopOf="@id/addStudentButton"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newStudentLastName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add"
        />

</androidx.constraintlayout.widget.ConstraintLayout>