<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.FragmentEditStudent">

    <TextView
        android:id="@+id/editStudentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edytuj studenta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editStudentTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/newStudentName2"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        android:text="@string/studentName"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/newStudentName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/editStudentTV"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/newStudentLastName2"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/newStudentLastName2"
        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
        android:text="@string/studentLastName"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/newStudentLastName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/newStudentName2"
        app:layout_constraintLeft_toRightOf="@id/textView4"
        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/editStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newStudentLastName2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/edit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>